# EasyEmbeddedFramework

./: .buildinfo  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  Jenkinsfile  Makefile  README.md  dockerfile  genindex.html  index.html  objects.inv  search.html  searchindex.js  system_architecture.html  system_overview.html
app/unit_test/: CMakeLists.txt  unit_test.cpp
binCmdParser/unit_test/: CMakeLists.txt  unit_test.cpp
easy_embedded/: CMakeLists.txt  ez_easy_embedded.c  ez_easy_embedded.h  features.cmake
easy_embedded/app/: CMakeLists.txt  ezSdk.c  ez_app.c  ez_app.h
easy_embedded/app/cli/: CMakeLists.txt  cli.html  ez_cli.h
easy_embedded/app/data_model/: CMakeLists.txt  data_model.html  ez_data_model.h
easy_embedded/app/ezmIpc/: ezmIpc_conf.h
easy_embedded/app/ezmKernel/: ezmKernel.h
easy_embedded/app/ipc/: CMakeLists.txt  ez_ipc.c  ez_ipc.h  ipc.html
easy_embedded/app/rpc/: CMakeLists.txt  ez_rpc.h  rpc.html
easy_embedded/app/scheduler/: scheduler.h
easy_embedded/app/statemachine/: .gitignore
easy_embedded/bsp/: CMakeLists.txt  ez_bsp.c  ez_bsp.h
easy_embedded/ezApp/: ezSdk_config.h
easy_embedded/ezApp/binCmdParser/: binCmdParser.c
easy_embedded/ezApp/ezmKernel/: ezmKernel.c
easy_embedded/ezApp/statemachine/: statemachine.c
easy_embedded/ezConfig/: .config.old  sdkconfig.h
easy_embedded/hal/: CMakeLists.txt  ez_driver_def.h  ez_hal.c  ez_hal.h
easy_embedded/hal/uart/: ez_uart.c
easy_embedded/hal/wifi_controller/: wifi_controller.c
easy_embedded/middlewares/: CMakeLists.txt  ez_middlewares.c  ez_middlewares.h
easy_embedded/middlewares/osal/: CMakeLists.txt  ez_osal.c  ez_osal.h  ez_osal_freertos.c  ez_osal_freertos.h  ez_osal_threadx.c  ez_osal_threadx.h
easy_embedded/service/: CMakeLists.txt  ez_service.c  ez_service.h
easy_embedded/service/cli/: CMakeLists.txt  ez_cli.c  ez_cli.h
easy_embedded/service/data_model/: CMakeLists.txt  ez_data_model.h
easy_embedded/service/driver/: CMakeLists.txt  driver.html  ez_driver.c  ez_driver.h  ez_driver_def.h
easy_embedded/service/event_notifier/: CMakeLists.txt  event_notifier.html  ez_event_notifier.c  ez_event_notifier.h
easy_embedded/service/ipc/: CMakeLists.txt  ez_ipc.c  ez_ipc.h
easy_embedded/service/rpc/: CMakeLists.txt  ez_rpc.c  ez_rpc.h
easy_embedded/service/state_machine/: CMakeLists.txt  ez_state_machine.c  ez_state_machine.h  state_machine.html
easy_embedded/service/task_worker/: CMakeLists.txt  ez_task_worker.c  ez_task_worker.h  task_worker.html
easy_embedded/utilities/: CMakeLists.txt  ez_utilities_common.h
easy_embedded/utilities/assert/: assert.html  ez_assert.h
easy_embedded/utilities/hexdump/: ez_hexdump.c  ez_hexdump.h  hexdump.html
easy_embedded/utilities/linked_list/: ez_linked_list.c  ez_linked_list.h  linked_list.html
easy_embedded/utilities/logging/: ez_logging.h  logging.html
easy_embedded/utilities/queue/: ez_queue.c  ez_queue.h  queue.html
easy_embedded/utilities/ring_buffer/: ez_ring_buffer.h  ring_buffer.html
easy_embedded/utilities/smalloc/: smalloc.c
easy_embedded/utilities/snprintf/: snprintf.h
easy_embedded/utilities/static_alloc/: ez_static_alloc.c  ez_static_alloc.h  static_alloc.html
easy_embedded/utilities/system_error/: ez_system_error.h
ezmsdk/: CMakeLists.txt  features.cmake  main.c
ezmsdk/app/: CMakeLists.txt  app.c  app.h  app_cli.c  app_cli.h  app_config.h  app_embedded_emulator.c  app_embedded_emulator.h  app_mqtt.c  app_mqtt.h  app_wifi_management.c  app_wifi_management.h  main.c
ezmsdk/app/unit_test/: unit_test.cpp
ezmsdk/auxiliary/StateMachineGenerator/: Provisioning.xml  provisioning.h
ezmsdk/auxiliary/module_template/: create_new_project.sh
ezmsdk/binCmdParser/: CMakeLists.txt  binCmdParser.c  binCmdParser.h
ezmsdk/binCmdParser/unit_test/: unit_test.cpp
ezmsdk/cli/: cli.c  cli.h
ezmsdk/configuration/: .config  Kconfig  sdkconfig.h
ezmsdk/data_model/: data_model.c  data_model.h
ezmsdk/ezApp/: CMakeLists.txt  ezSdk.c  ezSdk.h  ezSdk_config.h
ezmsdk/ezApp/binCmdParser/: binCmdParser.c  binCmdParser.h
ezmsdk/ezApp/cli/: cli.c  cli.h
ezmsdk/ezApp/data_model/: CMakeLists.txt  data_model.c  data_model.h  ez_data_model.c
ezmsdk/ezApp/ezDriver/: dummy_driver.c  dummy_driver.h  ezDriver.c  ezDriver.h
ezmsdk/ezApp/ezKernel/: ezKernel.c  ezKernel.h
ezmsdk/ezApp/ezRpc/: ezRpc.c  ezRpc.h
ezmsdk/ezApp/ezmDebug/: config.h  ezmDebug.h
ezmsdk/ezApp/ezmDriver/: driver.c  driver.h
ezmsdk/ezConfig/: .config  .config.old  Kconfig  sdkconfig.h
ezmsdk/ezDriver/: dummy_driver.c  dummy_driver.h  ezDriver.c  ezDriver.h
ezmsdk/ezHal/uart/: uart.c  (+1 more)
ezmsdk/ezKernel/: ezKernel.c  ezKernel.h
ezmsdk/ezRpc/: ezRpc.c  ezRpc.h
ezmsdk/ezUtilities/: CMakeLists.txt
ezmsdk/ezmDebug/: config.h  ezmDebug.c  ezmDebug.h
ezmsdk/ezmDriver/: driver.c  driver.h  dummy_driver.c  dummy_driver.h  ezmDriver.c  ezmDriver.h
ezmsdk/ezmIpc/: ezmIpc.c  ezmIpc.h  ezmIpc_conf.h
ezmsdk/ezmKernel/: ezmKernel.c  ezmKernel.h
ezmsdk/scheduler/: scheduler.h
ezmsdk/serial/: README.md  hal_uart.c  hal_uart.h  serial.c  serial.h  status_code.h
ezmsdk/service/: CMakeLists.txt
ezmsdk/statemachine/: statemachine.c  statemachine.h
ezmsdk/targets/: CMakeLists.txt
ezmsdk/unity_test_platform/: unity_test_setup.c  unity_test_setup.h
ezmsdk/utilities/: CMakeLists.txt
hal/uart/: CMakeLists.txt  uart.c
helper/hexdump/: CMakeLists.txt  hexdump.c  hexdump.h
ide/cmake/: CMakeLists.txt  main.c
scheduler/unit_test/: CMakeLists.txt  unit_test.cpp
targets/pi_pico/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main.c
tests/service/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  main.cpp  unit_test_assert.h  unit_test_binParser.h  unit_test_cli.h  unit_test_data_model.h  unit_test_event_notifier.h  unit_test_flash_simulator.h  unit_test_hexdump.h  unit_test_ipc.h  unit_test_kernel.h  unit_test_linked_list.h  unit_test_logging1.h  unit_test_logging2.h  unit_test_ring_buffer.h  unit_test_smalloc.h  unit_test_stcmem.h  unit_test_system_error.h  unit_test_wifi_controller.h
(+376 files in other folders)
